--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <textarea id="textInput" placeholder="Enter text here"></textarea>
             <button onclick="upperCase()">UPPERCASE</button>
             <button onclick="lowerCase()">lowercase</button>
-            <p mid="textResult"></p>
+            <p id="textResult"></p>
         </div>
 
         <!-- Color Generator -->
